executable(coloreditor SOURCES coloreditor.cpp LIBS SoWx)

executable(materialeditor  SOURCES materialeditor.cpp LIBS SoWx)

executable(renderarea SOURCES renderarea.cpp LIBS SoWx)

executable(wx_renderarea SOURCES wx_renderarea.cpp LIBS SoWx)

#add_executable(scrollview components/scrollview.cpp)
#target_link_libraries(scrollview SoWx)

executable(tripleview SOURCES tripleview.cpp LIBS SoWx)

executable(withoutdecor0 SOURCES withoutdecor0.cpp LIBS SoWx)

executable(withoutdecor1 SOURCES withoutdecor1.cpp LIBS SoWx)
